avoid content jumping

--- a/client/web/src/cody/components/GettingStarted.module.scss
+++ b/client/web/src/cody/components/GettingStarted.module.scss
@@ -1,12 +1,9 @@
 .container {
     flex: 1;
     display: flex;
-    align-items: center;
     background: var(--color-bg-1);
-}
-
-.content {
-    padding: 0 20%;
+    flex-direction: column;
+    overflow: auto;
 }
 
 .icons {
